--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "rest-client",
+  "name": "susanX",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
+  "description": "first express",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "mongoose": "^4.5.8"
+  }
 }
